final index result

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar una solución a su medida.</th>
+                    <td>Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar una solución a su medida.</td>
                     <td>Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa: respetar su tiempo y respetar los plazos acordados.</td>
                     
                     <td>Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.</td>
