--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 
             <h2>Nuestro Equipo</h2>
             <div>
-                <img src="images/img prs1.jpg" alt="persona que se ocupa de diseñar" width="400" height="400">
+                <img src="images/imagenprs1.jpg" alt="persona que se ocupa de diseñar" width="400" height="400">
                     <h3>Andres Cubo</h3>
                     <h4>Diseñador de productos</h4>
-                <img src="images/img prs2.jpg" alt="persona que es desarrolladora" width="400" height="400">
+                <img src="images/imagenprs2.jpg" alt="persona que es desarrolladora" width="400" height="400">
                     <h3>Carla Palacios</h3>
                     <h4>Desarrolladora Frontend</h4>
-                <img src="images/img prs3.jpg" alt="persona encargada de realizar el marketing" width="400" height="400">
+                <img src="images/imagenprs3.jpg" alt="persona encargada de realizar el marketing" width="400" height="400">
                     <h3>Mario Dorado</h3>
                     <h4>Marketing</h4>
-                <img src="images/img prs4.jpg" alt="persona encargada del deseño iu" width="400" height="400">
+                <img src="images/imagenprs4.jpg" alt="persona encargada del deseño iu" width="400" height="400">
                     <h3>Pablo mijangos</h3>
                     <h4>Diseñador IU</h4>
             </div>
