--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>goit-markup-hw-01. </title>
 </head>
-<body style="background-color:#707174;">
+<body>
     <header>
                 
         <div class="header_menu">
