--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <footer>
         <address>
-            <a href="#">WebStudio</a> 
+            <a href="#">WebStudio</a><br>
             Calz. Ticomán 500, Ciudad de México, CDMX, México<br>
             <a href="#">info@example.com</a><br>
             <a href="#">+52 55 5529 6000</a>    
