--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>goit-markup-hw-01. </title>
 </head>
 <body>
-    <header>
-                
+    <header>    
         <div class="header_menu">
                 
                 <nav>
@@ -56,7 +55,7 @@
             <img src="images/img3.jpg" alt="paleta de color para pagina">
 
             <h2>Nuestro Equipo</h2>
-            <div>
+            <section>
                 <img src="images/imagenprs1.jpg" alt="persona que se ocupa de diseñar" width="400" height="400">
                     <h3>Andres Cubo</h3>
                     <h4>Diseñador de productos</h4>
@@ -69,7 +68,7 @@
                 <img src="images/imagenprs4.jpg" alt="persona encargada del deseño iu" width="400" height="400">
                     <h3>Pablo mijangos</h3>
                     <h4>Diseñador IU</h4>
-            </div>
+            </section>
     </main>
 
     <footer>
